--- a/index.html
+++ b/index.html
@@ -45,17 +45,23 @@
        <img src="pngimghmm.png" alt="" style="text-align:center; width:200px;height:200px;">
       <p id="text20"><strong>"Whole latte Love" </strong></p><p id="text21"><span>Stream my new and first ever single, "whole latte love" an instrumental ballad 
       which a part of a school project on all the major streaming services!</span><br> <br> <span>You can also add this to your studying/ regular vibing playlists
-      which would help me a lot.</span>
+      which would help me a lot.</span> <br>
+      <!-- lipsum boogey text -->
+      Praesent tincidunt eget massa at viverra. Pellentesque consectetur tellus nec elementum dapibus. Ut ac volutpat felis. Aliquam eu viverra orci,
+      vel commodo nibh. Ut porttitor ante vitae augue porttitor, non tincidunt neque egestas. Nam bibendum faucibus venenatis. Vestibulum a 
+      dui eros. Vivamus commodo, leo eget lacinia facilisis, metus ex malesuada nulla, ut maximus felis nibh vitae nunc. 
+      Sed in orci et felis fringilla bibendum. Nunc bibendum eget mi ut bibendum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+      <!-- lipsum text end -->
       </p>
       <ul id="buttons05" class="buttons">
       <li><a href="#" class="button n01">Spotify</a></li>
-      <li><a href="#" class="button n02">apple music</a></li>
-        <li><a href="#" class="button n03">amazon music</a></li>
-        <li><a href="#" class="button n04">youtube music</a></li>
-        <li><a href="#" class="button n05">shazam</a></li>
-        <li><a href="#" class="button n06">tidal</a></li>
-        <li><a href="#" class="button n07">deezer</a></li>
-        <li><a href="#" class="button n08">claro musica</a></li>
+      <li><a href="#" class="button n02">Apple music</a></li>
+        <li><a href="#" class="button n03">Amazon music</a></li>
+        <li><a href="#" class="button n04">Youtube music</a></li>
+        <li><a href="#" class="button n05">Shazam</a></li>
+        <li><a href="#" class="button n06">Tidal</a></li>
+        <li><a href="#" class="button n07">Deezer</a></li>
+        <li><a href="#" class="button n08">Claro musica</a></li>
       </ul>
 </section>
 
