--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       <h2 id="text19"><strong>Listen to my Music</strong></h2>
        <img src="pngimghmm.png" alt="" style="text-align:center; width:200px;height:200px;">
       <p id="text20"><strong>Stream "Whole latte Love" </strong></p><p id="text21"><span>Stream my new and first ever single, "whole latte love" an instrumental ballad 
-      which a part of a school project on all the major streaming services!</span><br> <br> <span>You can also add this to your studying/ regular vibing playlists
-      which would help me a lot.</span> <br>
+      which a part of a school project on all the major streaming services!</span><span>You can also add this to your studying/ regular vibing playlists
+      which would help me a lot.</span> <br><br>
       <!-- lipsum boogey text -->
       Praesent tincidunt eget massa at viverra. Pellentesque consectetur tellus nec elementum dapibus. Ut ac volutpat felis. Aliquam eu viverra orci,
       vel commodo nibh. Ut porttitor ante vitae augue porttitor, non tincidunt neque egestas. Nam bibendum faucibus venenatis. Vestibulum a 
