--- a/index.html
+++ b/index.html
@@ -69,11 +69,17 @@
       </ul>
 </section>
 
-<section id="three-section" class="inactive" style="display: none;"><h2 id="text26"><strong>Shop from my stores</strong></h2><p id="text28"><strong>International </strong></p><p id="text29"><span>Check out my print on demand businesses down below to shop for clothes, bags, templates, hats, mugs, accessories etc.</span><br> <br> <span>Email me for any customs / queries / price negotiations if applicable.</span></p><ul id="buttons06" class="buttons"><li><a href="#" class="button n01">Redbubble</a></li></ul></section><section id="four-section" class="inactive" style="display: none;"><h2 id="text27"><strong>Play my simple games</strong></h2><ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Redbubble</a></li></ul></section><section id="five-section" class="inactive" style="display: none;"><h2 id="text11"><strong>Non Profit Organisations and Fundraisers</strong></h2>
-<p id="text01"><strong>Theraprize</strong></p><p id="text09"><span>Check out my print on demand businesses down below to shop for clothes, bags, templates, hats, mugs, accessories etc.</span>
-<br> <br> <span>Email me for any customs / queries / price negotiations if applicable.</span></p>
+<section id="three-section" class="inactive" style="display: none;"><h2 id="text26"><strong>Shop from my stores</strong></h2><p id="text28"><strong>International </strong></p><p id="text29"><span>Check out my print on demand businesses down below to shop for clothes, bags, templates, hats, mugs, accessories etc.</span><br> <br> <span>Email me for any customs / queries / price negotiations if applicable.</span></p><ul id="buttons06" class="buttons"><li><a href="#" class="button n01">Redbubble</a></li></ul></section><section id="four-section" class="inactive" style="display: none;"><h2 id="text27"><strong>Play my simple games</strong></h2><ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Redbubble</a></li></ul></section><section id="five-section" class="inactive" style="display: none;">
+  <h2 id="text11"><strong>Non Profit Organisations and Fundraisers</strong></h2>
+<p id="text01"><strong>Theraprize</strong></p>
+  <p id="text09"><span>In India, alonsgide with the cost of therapy being so excessively high, public stigma is a factor in the underreported prevalence of mental disorders, 
+  with only 7.3% of young people in India reporting a mental disorder and fewer accessing treatment. </span><br>
+  <span>Compared to adults, young people do not seek help for mental health problems due to financial restraints, peer pressure, a desire to be self-reliant, 
+    lack of knowledge to recognize mental health problems or lack of awareness about mental-health-related services.</span> <br> <br> 
+   <span>Our goal is to connect students and young adults to free/affordable mental health professionals</span></p>
+  
 <ul id="buttons01" class="buttons">
-<li><a href="#" class="button n01">Redbubble</a></li>
+<li><a href="#" class="button n01">Visit Now</a></li>
 </ul>
 </section>
 
