--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 <section id="three-section" class="inactive" style="display: none;"><h2 id="text26"><strong>Shop from my stores</strong></h2><p id="text28"><strong>International </strong></p><p id="text29"><span>Check out my print on demand businesses down below to shop for clothes, bags, templates, hats, mugs, accessories etc.</span><br> <br> <span>Email me for any customs / queries / price negotiations if applicable.</span></p><ul id="buttons06" class="buttons"><li><a href="#" class="button n01">Redbubble</a></li></ul></section><section id="four-section" class="inactive" style="display: none;"><h2 id="text27"><strong>Play my simple games</strong></h2><ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Redbubble</a></li></ul></section><section id="five-section" class="inactive" style="display: none;">
   <h2 id="text11"><strong>Non Profit Organisations <br>
     and Fundraisers</strong></h2>
+  <img src="theraprize.png" alt="" style="text-align:center; width:200px;height:200px;" href="theraprize.netlify.app">
 <p id="text01"><strong>Theraprize</strong></p>
   <p id="text09"><span>In India, alonsgide with the cost of therapy being so excessively high, public stigma is a factor in the underreported prevalence of mental disorders, 
   with only 7.3% of young people in India reporting a mental disorder and fewer accessing treatment. </span><br>
