--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
   <h2 id="text11"><strong>Non Profit Organisations <br>
     and Fundraisers</strong></h2>
   <img src="theraprize.png" alt="" style="text-align:center; width:200px;height:200px;" href="theraprize.netlify.app">
-<p id="text01"><strong>Theraprize</strong></p>
-  <p style="font-family:'Poppins; size:2px; color:white;">Founder, Senior Web Designer, Developer and Researcher</p>
+  <p id="text01"><strong>Theraprize</strong></p>
+  <p id="text732" style="font-family:'Poppins'; font-size:2px; color:#121212;">Founder, Senior Web Designer, Developer and Researcher</p>
   <p id="text09"><span>In India, alonsgide with the cost of therapy being so excessively high, public stigma is a factor in the underreported prevalence of mental disorders, 
   with only 7.3% of young people in India reporting a mental disorder and fewer accessing treatment. </span><br>
   <span>Compared to adults, young people do not seek help for mental health problems due to financial restraints, peer pressure, a desire to be self-reliant, 
