--- a/index.html
+++ b/index.html
@@ -24,12 +24,39 @@
     <li><a class="n04" href="#"><svg><use xlink:href="#icon-9f9"></use></svg><span class="label">Music</span></a></li>
     </ul></div></div></div></div>
 
-<div id="container03" class="container columns full screen"><div class="wrapper"><div class="inner"><div><p id="text22"><a href="#one">One</a></p>
+<div id="container03" class="container columns full screen">
+  <div class="wrapper"><div class="inner">
+    <div>
+    <p id="text22"><a href="#one">One</a></p>
   <p id="text04"><a href="#five">Five</a></p></div>
-  <div><p id="text23"><a href="#two">Two</a></p>
-    <p id="text03"><a href="#two">Six</a></p></div>
-<div><p id="text24"><a href="#three">Three</a></p>
-  <p id="text06"><a href="#three">Socials</a></p></div><div><p id="text25"><a href="#four">Four</a></p><p id="text05"><a href="#four">More</a></p></div></div></div></div></header><section id="home-section" class="active"><p id="text10"><strong>About</strong></p><p id="text07"><span>Hello! I am Anoushka. I'm 15 years old and I'm in 11th grade studying STEM subjects. I'm a Kathak Dancer and have been dancing since I was 3 and have a national level diploma in Kathak Dance.</span><br> <br> <span>I'm also a singer and have been doing Indian Classical Music for more than have a decade now. I can also play the harmonium and keyboard along with a little bit of tabla.</span><br> <br> <span>Additionally, I'm a Full Stack Developer who has a strong backbone in Front End Web Development. I'm also a beginner at <mark>App Development</mark> and Ethical Hacking. I've also been learning Artificial Intelligence for a few years now and I'm really interested in pursuing it along with Computer Engineering in the near future.</span><br> <br> <span>I'm also a Graphic Designer who is worked in Adobe Photoshop and Adobe Illustrator. I also enjoy creating small hand drawn designs on Procreate and own a few POD businesses to sell these designs in forms of articles like apparel, accessories etc.</span><br> <br> <span>I'd say I genuinely enjoy helping others a lot and am a feminist who advocates for Mental Health especially in Children and young adults. I'm the founder of the Non Profit Organisations: <a href="http://theraprize.netlify.app">Theraprize</a> and <a href="http://grocereein.netlify.app">Groceree</a> and I also conduct various fundraiser events and campaigns on a very regular basis.</span><br></p>
+  <div>
+    <p id="text23"><a href="#two">Two</a></p>
+    <p id="text03"><a href="#six">Six</a></p>
+  </div>
+  <div>
+  <p id="text24"><a href="#three">Three</a></p>
+  <p id="text06"><a href="#social">Socials</a></p>
+  </div>
+  <div>
+  <p id="text25"><a href="#four">Four</a></p>
+  <p id="text05"><a href="#more">More</a></p>
+  </div>
+   </div>
+  </div></div>
+</header>
+
+<section id="home-section" class="active"><p id="text10"><strong>About</strong></p><p id="text07">
+  <span>Hello! I am Anoushka. I'm 15 years old and I'm in 11th grade studying STEM subjects. I'm a Kathak Dancer and have been dancing since 
+    I was 3 and have a national level diploma in Kathak Dance.</span><br> <br> <span>I'm also a singer and have been doing Indian Classical 
+  Music for more than have a decade now. I can also play the harmonium and keyboard along with a little bit of tabla.</span><br> <br> 
+  <span>Additionally, I'm a Full Stack Developer who has a strong backbone in Front End Web Development. I'm also a beginner at <mark>App 
+    Development</mark> and Ethical Hacking. I've also been learning Artificial Intelligence for a few years now and I'm really interested 
+    in pursuing it along with Computer Engineering in the near future.</span><br> <br> <span>I'm also a Graphic Designer who is worked in 
+  Adobe Photoshop and Adobe Illustrator. I also enjoy creating small hand drawn designs on Procreate and own a few POD businesses to sell 
+  these designs in forms of articles like apparel, accessories etc.</span><br> <br> <span>I'd say I genuinely enjoy helping others a lot and 
+  am a feminist who advocates for Mental Health especially in Children and young adults. I'm the founder of the Non Profit Organisations: 
+  <a href="http://theraprize.netlify.app">Theraprize</a> and <a href="http://grocereein.netlify.app">Groceree</a> and I also conduct various 
+  fundraiser events and campaigns on a very regular basis.</span><br></p>
 </section>
   
   <section id="one-section" class="inactive" style="display: none;"><h2 id="text16">
@@ -97,6 +124,27 @@
   <h2 id="text11"><strong>Fundraisers</strong></h2>
   
 </section>
+
+<section id="ref-section" class="inactive" style="display: none;"><h2 id="text26"><strong>Shop from my stores</strong></h2><p id="text28"><strong>International </strong></p><p id="text29"><span>Check out my print on demand businesses down below to shop for clothes, bags, templates, hats, mugs, accessories etc.</span><br> <br> <span>Email me for any customs / queries / price negotiations if applicable.</span></p><ul id="buttons06" class="buttons"><li><a href="#" class="button n01">Redbubble</a></li></ul></section><section id="four-section" class="inactive" style="display: none;"><h2 id="text27"><strong>Play my simple games</strong></h2><ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Redbubble</a></li></ul></section><section id="five-section" class="inactive" style="display: none;">
+  <h2 id="text11"><strong>Affiliate Links</strong></h2>
+  <img src="theraprize.png" alt="theraprize logo" style="text-align:center; width:150px;height:150px;" href="theraprize.netlify.app">
+  <p id="text01"><strong>Bluehost</strong></p>
+<!--   <p id="text732" style="font-family:'Poppins'; font-size:2px; color:#121212;">Founder, Senior Web Designer, Developer and Researcher</p> -->
+  <p id="text09"><span>In India, alonsgide with the cost of therapy being so excessively high, public stigma is a factor in the underreported prevalence of mental disorders, 
+  with only 7.3% of young people in India reporting a mental disorder and fewer accessing treatment. </span><br>
+  <span>Compared to adults, young people do not seek help for mental health problems due to financial restraints, peer pressure, a desire to be self-reliant, 
+    lack of knowledge to recognize mental health problems or lack of awareness about mental-health-related services.</span> <br> <br> 
+   <span>Our goal is to connect students and young adults to free/affordable mental health professionals</span></p>
+  
+<ul id="buttons01" class="buttons">
+<li><a href="#" class="button n01">Visit now</a></li>
+</ul>
+  
+  <h2 id="text11"><strong>Promo Codes</strong></h2>
+  
+</section>
+
+
 
 <footer id="footer">
   <p></p>
