--- a/index.html
+++ b/index.html
@@ -106,7 +106,12 @@
       </ul>
 </section>
 
-<section id="three-section" class="inactive" style="display: none;"><h2 id="text26"><strong>Shop from my stores</strong></h2><p id="text28"><strong>International </strong></p><p id="text29"><span>Check out my print on demand businesses down below to shop for clothes, bags, templates, hats, mugs, accessories etc.</span><br> <br> <span>Email me for any customs / queries / price negotiations if applicable.</span></p><ul id="buttons06" class="buttons"><li><a href="#" class="button n01">Redbubble</a></li></ul></section><section id="four-section" class="inactive" style="display: none;"><h2 id="text27"><strong>Play my simple games</strong></h2><ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Redbubble</a></li></ul></section><section id="five-section" class="inactive" style="display: none;">
+<section id="three-section" class="inactive" style="display: none;"><h2 id="text26"><strong>Shop from my stores</strong></h2><p id="text28"><strong>International </strong>
+  </p><p id="text29"><span>Check out my print on demand businesses down below to shop for clothes, bags, templates, hats, mugs, accessories etc.</span><br> 
+  <br> <span>Email me for any customs / queries / price negotiations if applicable.</span></p><ul id="buttons06" class="buttons"><li><a href="#" 
+ class="button n01">Redbubble</a></li></ul></section><section id="four-section" class="inactive" style="display: none;">
+    <h2 id="text27"><strong>Play my simple games</strong></h2><ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Redbubble</a></li>
+  </ul></section><section id="five-section" class="inactive" style="display: none;">
   <h2 id="text11"><strong>Non Profit Organisations</strong></h2>
   <img src="theraprize.png" alt="theraprize logo" style="text-align:center; width:150px;height:150px;" href="theraprize.netlify.app">
   <p id="text01"><strong>Theraprize</strong></p>
@@ -125,24 +130,12 @@
   
 </section>
 
-<section id="ref-section" class="inactive" style="display: none;"><h2 id="text26"><strong>Shop from my stores</strong></h2><p id="text28"><strong>International </strong></p><p id="text29"><span>Check out my print on demand businesses down below to shop for clothes, bags, templates, hats, mugs, accessories etc.</span><br> <br> <span>Email me for any customs / queries / price negotiations if applicable.</span></p><ul id="buttons06" class="buttons"><li><a href="#" class="button n01">Redbubble</a></li></ul></section><section id="four-section" class="inactive" style="display: none;"><h2 id="text27"><strong>Play my simple games</strong></h2><ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Redbubble</a></li></ul></section><section id="five-section" class="inactive" style="display: none;">
-  <h2 id="text11"><strong>Affiliate Links</strong></h2>
-  <img src="theraprize.png" alt="theraprize logo" style="text-align:center; width:150px;height:150px;" href="theraprize.netlify.app">
-  <p id="text01"><strong>Bluehost</strong></p>
-<!--   <p id="text732" style="font-family:'Poppins'; font-size:2px; color:#121212;">Founder, Senior Web Designer, Developer and Researcher</p> -->
-  <p id="text09"><span>In India, alonsgide with the cost of therapy being so excessively high, public stigma is a factor in the underreported prevalence of mental disorders, 
-  with only 7.3% of young people in India reporting a mental disorder and fewer accessing treatment. </span><br>
-  <span>Compared to adults, young people do not seek help for mental health problems due to financial restraints, peer pressure, a desire to be self-reliant, 
-    lack of knowledge to recognize mental health problems or lack of awareness about mental-health-related services.</span> <br> <br> 
-   <span>Our goal is to connect students and young adults to free/affordable mental health professionals</span></p>
-  
-<ul id="buttons01" class="buttons">
-<li><a href="#" class="button n01">Visit now</a></li>
-</ul>
-  
-  <h2 id="text11"><strong>Promo Codes</strong></h2>
-  
-</section>
+<section id="ref-section" class="inactive" style="display: none;">
+  <h2 id="text26"><strong>Affiliate Links</strong></h2><p id="text28"><strong>Blue Host</strong></p>
+  <p id="text29"><span>Check out my print on demand businesses down below to shop for clothes, bags, templates, hats, mugs, accessories etc.</span><br> 
+    <br> <span>Email me for any customs / queries / price negotiations if applicable.</span></p>
+  <ul id="buttons06" class="buttons"><li><a href="#" class="button n01">Sign up Now</a></li></ul></section>
+
 
 
 
