--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
 <section id="ref-section" class="inactive" style="display: none;">
   <h2 id="text26"><strong>Affiliate Links</strong></h2>
   <p id="text28"><strong>Blue Host</strong></p>
-  <p id="text29"><span>Get a completely FREE web domain for a whole year along with custom email features and smooth and 
+  <p id="text29"><span>Get a completely <u> FREE custom .com web domain</u> for a whole year along with custom email features and smooth and 
     secure web hosting with Bluehost. With web hosting available at the cheapest prices and crazy good service with assistance available
-    24*7, Bluehost has proven to be a great service that I have been using for years now and I have absolutely zero complaints. Free Wordpress 
-    installation available.</span><br>
-  <span> Sign up to Bluehost now and get a 30 day money back guarantee if you're unsatisfied with the service. Personally I 100% recommend
+    24*7, Bluehost has proven to be a great service that I have been using for years now and I have absolutely zero complaints. <u>Free Wordpress 
+    installation</u> available.</span><br> <br>
+    <span> Sign up to Bluehost now and get a <u>30 day money back guarantee</u> if you're unsatisfied with the service. Personally, I 100% recommend
     checking it out since it's my *favourite* web hosting sites which hosts smooth and effortless hosting for both front end and back end 
     frameworks.</span></p>
   <ul id="buttons06" class="buttons">
