--- a/index.html
+++ b/index.html
@@ -143,6 +143,73 @@
   <ul id="buttons06" class="buttons">
     <li><a href="#" class="button n01">Sign up Now</a></li>
   </ul>
+  <p id="text28"><strong>Grammarly</strong></p>
+  <p id="text29"><span>Get a completely <u> FREE custom .com web domain</u> for a whole year along with custom email features and smooth and 
+    secure web hosting with Bluehost. With web hosting available at the cheapest prices and crazy good service with assistance available
+    24*7, Bluehost has proven to be a great service that I have been using for years now and I have absolutely zero complaints. <u>Free Wordpress 
+    installation</u> available.</span><br> <br>
+    <span> Sign up to Bluehost now and get a <u>30 day money back guarantee</u> if you're unsatisfied with the service. Personally, I 100% recommend
+    checking it out since it's my *favourite* web hosting sites which hosts smooth and effortless hosting for both front end and back end 
+    frameworks.</span></p>
+  <ul id="buttons06" class="buttons">
+    <li><a href="#" class="button n01">Sign up Now</a></li>
+  </ul>
+  <p id="text28"><strong>Honey</strong></p>
+  <p id="text29"><span>Get a completely <u> FREE custom .com web domain</u> for a whole year along with custom email features and smooth and 
+    secure web hosting with Bluehost. With web hosting available at the cheapest prices and crazy good service with assistance available
+    24*7, Bluehost has proven to be a great service that I have been using for years now and I have absolutely zero complaints. <u>Free Wordpress 
+    installation</u> available.</span><br> <br>
+    <span> Sign up to Bluehost now and get a <u>30 day money back guarantee</u> if you're unsatisfied with the service. Personally, I 100% recommend
+    checking it out since it's my *favourite* web hosting sites which hosts smooth and effortless hosting for both front end and back end 
+    frameworks.</span></p>
+  <ul id="buttons06" class="buttons">
+    <li><a href="#" class="button n01">Save money Now</a></li>
+  </ul>
+  <p id="text28"><strong>Skillshare</strong></p>
+  <p id="text29"><span>Get a completely <u> FREE custom .com web domain</u> for a whole year along with custom email features and smooth and 
+    secure web hosting with Bluehost. With web hosting available at the cheapest prices and crazy good service with assistance available
+    24*7, Bluehost has proven to be a great service that I have been using for years now and I have absolutely zero complaints. <u>Free Wordpress 
+    installation</u> available.</span><br> <br>
+    <span> Sign up to Bluehost now and get a <u>30 day money back guarantee</u> if you're unsatisfied with the service. Personally, I 100% recommend
+    checking it out since it's my *favourite* web hosting sites which hosts smooth and effortless hosting for both front end and back end 
+    frameworks.</span></p>
+  <ul id="buttons06" class="buttons">
+    <li><a href="#" class="button n01">Sign up Now</a></li>
+  </ul>
+  <p id="text28"><strong>Fiverr</strong></p>
+  <p id="text29"><span>Get a completely <u> FREE custom .com web domain</u> for a whole year along with custom email features and smooth and 
+    secure web hosting with Bluehost. With web hosting available at the cheapest prices and crazy good service with assistance available
+    24*7, Bluehost has proven to be a great service that I have been using for years now and I have absolutely zero complaints. <u>Free Wordpress 
+    installation</u> available.</span><br> <br>
+    <span> Sign up to Bluehost now and get a <u>30 day money back guarantee</u> if you're unsatisfied with the service. Personally, I 100% recommend
+    checking it out since it's my *favourite* web hosting sites which hosts smooth and effortless hosting for both front end and back end 
+    frameworks.</span></p>
+  <ul id="buttons06" class="buttons">
+    <li><a href="#" class="button n01">Sign up Now</a></li>
+  </ul>
+  <p id="text28"><strong>Canva</strong></p>
+  <p id="text29"><span>Get a completely <u> FREE custom .com web domain</u> for a whole year along with custom email features and smooth and 
+    secure web hosting with Bluehost. With web hosting available at the cheapest prices and crazy good service with assistance available
+    24*7, Bluehost has proven to be a great service that I have been using for years now and I have absolutely zero complaints. <u>Free Wordpress 
+    installation</u> available.</span><br> <br>
+    <span> Sign up to Bluehost now and get a <u>30 day money back guarantee</u> if you're unsatisfied with the service. Personally, I 100% recommend
+    checking it out since it's my *favourite* web hosting sites which hosts smooth and effortless hosting for both front end and back end 
+    frameworks.</span></p>
+  <ul id="buttons06" class="buttons">
+    <li><a href="#" class="button n01">Sign up Now</a></li>
+  </ul>
+  <p id="text28"><strong>Carrd</strong></p>
+  <p id="text29"><span>Get a completely <u> FREE custom .com web domain</u> for a whole year along with custom email features and smooth and 
+    secure web hosting with Bluehost. With web hosting available at the cheapest prices and crazy good service with assistance available
+    24*7, Bluehost has proven to be a great service that I have been using for years now and I have absolutely zero complaints. <u>Free Wordpress 
+    installation</u> available.</span><br> <br>
+    <span> Sign up to Bluehost now and get a <u>30 day money back guarantee</u> if you're unsatisfied with the service. Personally, I 100% recommend
+    checking it out since it's my *favourite* web hosting sites which hosts smooth and effortless hosting for both front end and back end 
+    frameworks.</span></p>
+  <ul id="buttons06" class="buttons">
+    <li><a href="#" class="button n01">Sign up Now</a></li>
+  </ul>
+  <h2 id="text26"><strong>Promo Codes</strong></h2>
 </section>
 
 
