--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
 <div id="container03" class="container columns full screen">
   <div class="wrapper"><div class="inner">
     <div>
-    <p id="text22"><a href="#one">One</a></p>
-  <p id="text04"><a href="#five">Five</a></p></div>
+    <p id="text22"><a href="#one">Apps</a></p>
+  <p id="text04"><a href="#five">Non Profit</a></p></div>
   <div>
-    <p id="text23"><a href="#two">Two</a></p>
-    <p id="text03"><a href="#six">Six</a></p>
+    <p id="text23"><a href="#two">Music</a></p>
+    <p id="text03"><a href="#ref">Affiliate</a></p>
   </div>
   <div>
-  <p id="text24"><a href="#three">Three</a></p>
+  <p id="text24"><a href="#three">Stores</a></p>
   <p id="text06"><a href="#social">Socials</a></p>
   </div>
   <div>
-  <p id="text25"><a href="#four">Four</a></p>
+  <p id="text25"><a href="#four">Games</a></p>
   <p id="text05"><a href="#more">More</a></p>
   </div>
    </div>
