--- a/example.html
+++ b/example.html
@@ -28,27 +28,14 @@
   <div class="wrapper"><div class="inner">
     <div>
     <p id="text22"><a href="#one">Apps</a></p>
-  <p id="text04"><a href="#five">Non Profit</a></p></div>
-  <div>
+    <p id="text04"><a href="#five">Non Profit</a></p>
     <p id="text23"><a href="#two">Music</a></p>
-  </div>
-  <div>
-  <p id="text24"><a href="#three">Stores</a></p>
-  </div>
-  <div>
-  <p id="text25"><a href="#four">Games</a></p>
-  </div>
-   <div>
+    <p id="text24"><a href="#three">Stores</a></p>
+    <p id="text25"><a href="#four">Games</a></p>
     <p id="text22"><a href="#one">Apps</a></p>
-    </div>
-  <div>
     <p id="text03"><a href="#ref">Affiliate</a></p>
-  </div>
-  <div>
-  <p id="text06"><a href="#social">Socials</a></p>
-  </div>
-  <div>
-  <p id="text05"><a href="#more">More</a></p>
+    <p id="text06"><a href="#social">Socials</a></p>
+    <p id="text05"><a href="#more">More</a></p>
   </div>
    </div>
   </div></div>
