--- a/example.html
+++ b/example.html
@@ -27,13 +27,13 @@
 <div id="container03" class="container columns full screen">
   <div class="wrapper"><div class="inner">
     <div>
-    <p id="text22"><a href="#one">Apps</a> | <a href="#five"> Non Profit</a> </p>
+    <p id="text22"><a href="#one">Apps</a> | <a href="#two"> Music</a> </p>
     </div> <div>
-    <p id="text23"><a href="#two">Music</a> | <a href="#three"> Stores</a></p>
+    <p id="text23"><a href="#five">Non Profit</a> | <a href="#four"> Games</a></p>
     </div> <div>
-    <p id="text25"><a href="#four">Games</a> | <a href="#more">More</a></p>
+    <p id="text25"><a href="#three">Stores</a> | <a href="#ref">Affiliates</a></p>
     </div> <div>
-    <p id="text03"><a href="#ref">Affiliate</a> | <a href="#social">Socials</a></p>
+    <p id="text03"><a href="more">More</a> | <a href="#social">Socials</a></p>
   </div>
    </div>
   </div></div>
