--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
     </div> <div>
     <p id="text03"><a href="#more">More</a> | <a href="#social">Socials</a></p>
   </div>
+    
+    <div>
+    <p id="text03"><a href="#more">More</a> | <a href="#social">Socials</a></p>
+  </div>
+    
    </div>
   </div></div>
 </header>
