--- a/index.html
+++ b/index.html
@@ -100,10 +100,22 @@
       </ul>
 </section>
 
-<section id="three-section" class="inactive" style="display: none;"><h2 id="text26"><strong>Shop from my stores</strong></h2><p id="text28"><strong>International </strong>
-  </p><p id="text29"><span>Check out my print on demand businesses down below to shop for clothes, bags, templates, hats, mugs, accessories etc.</span><br> 
-  <br> <span>Email me for any customs / queries / price negotiations if applicable.</span></p><ul id="buttons06" class="buttons"><li><a href="#" 
- class="button n01">Redbubble</a></li></ul></section><section id="four-section" class="inactive" style="display: none;">
+<section id="three-section" class="inactive" style="display: none;"><h2 id="text26"><strong>Shop from my stores : International</strong></h2>
+  
+  <p id="text28"><strong>Redbubble</strong>
+  </p><p id="text29"><span> Check out my Redbubble store for stickers, bags, pouches, phone cases, clothes, birthday cards, pins, 
+  hats, cups, tapestries , facemasks, bedsheets, pillows, posters and more ! With over 100 *public* designs and more than 900 unique 
+  items on my store, there's a wide variety to choose from. You can customise the color combinations of 
+  any existing design or send me an email if you want a custom design made just for you! <br> <br>
+  There's school subject labels, pop culture references, tech and just visually appealing designs on my store, so whoever you may be,
+  whatever your age and interests might be, there's something that's perfect just for you.</span><br> 
+<!--   <br> <span>Email me for any customs / queries / price negotiations if applicable.</span> -->
+  </p>
+  <ul id="buttons06" class="buttons"><li><a href="anoushkabh.redbubble.com" class="button n01">Redbubble</a></li></ul>
+
+</section>
+
+<section id="four-section" class="inactive" style="display: none;">
     <h2 id="text27"><strong>Play my simple games</strong></h2><ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Redbubble</a></li>
   </ul></section><section id="five-section" class="inactive" style="display: none;">
   <h2 id="text11"><strong>Non Profit Organisations</strong></h2>
