--- a/index.html
+++ b/index.html
@@ -112,6 +112,20 @@
 <!--   <br> <span>Email me for any customs / queries / price negotiations if applicable.</span> -->
   </p>
   <ul id="buttons06" class="buttons"><li><a href="anoushkabh.redbubble.com" class="button n01">Redbubble</a></li></ul>
+  
+  <p id="text28"><strong>Spring</strong>
+  </p><p id="text29"><span> Check out my Spring store for hoodies, sweatshirts, stickers, tote bags, pouches, phone cases, 
+  pop up cases, birthday cards, pins, bucket hats, cups, tapestries, digital designs, audios, templates etc. ! 
+  With over 20+ digital designs and more than 50 unique products on my store, there's a wide variety to choose from. 
+  You can customise the color combinations of any existing design or send me an email if you want a custom 
+  design made just for you! <br> <br>
+   <span>If you're concerned about the environment, carbon emmisions and global warming like me, check out the 
+     earth friendly "Organic - Eco" Collection and if you're into yoga and exercise, our Exercise Collection of 
+  Yoga mats and Biking shorts is just for you!</span> 
+  There's school subject labels, pop culture references, tech and just visually appealing designs on my store, so whoever you may be,
+  whatever your age and interests might be, there's something that's perfect just for you.</span><br> 
+  </p>
+  <ul id="buttons06" class="buttons"><li><a href="anoushkabh.redbubble.com" class="button n01">Redbubble</a></li></ul>
 
 </section>
 
