--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
   design made just for you! <br> <br>
    <span>If you're concerned about the environment, carbon emmisions and global warming like me, check out the 
      earth friendly "Organic - Eco" Collection and if you're into yoga and exercise, our Exercise Collection of 
-  Yoga mats and Biking shorts is just for you!</span> 
+  Yoga mats and Biking shorts is just for you!</span> <br>
   There's school subject labels, pop culture references, tech and just visually appealing designs on my store, so whoever you may be,
   whatever your age and interests might be, there's something that's perfect just for you.</span><br> 
   </p>
-  <ul id="buttons06" class="buttons"><li><a href="anoushkabh.redbubble.com" class="button n01">Redbubble</a></li></ul>
+  <ul id="buttons06" class="buttons"><li><a href="https://anoushka.creator-spring.com" class="button n01">Spring Store</a></li></ul>
 
 </section>
 
