--- a/index.html
+++ b/index.html
@@ -115,17 +115,32 @@
   
   <p id="text28"><strong>Spring</strong>
   </p><p id="text29"><span> Check out my Spring store for hoodies, sweatshirts, stickers, tote bags, pouches, phone cases, 
-  pop up cases, birthday cards, pins, bucket hats, cups, tapestries, digital designs, audios, templates etc. ! 
+  pop up cases, birthday cards, pins, bucket hats, cups, digital designs, audios, templates etc. ! 
   With over 20+ digital designs and more than 50 unique products on my store, there's a wide variety to choose from. 
   You can customise the color combinations of any existing design or send me an email if you want a custom 
   design made just for you! <br> <br>
    <span>If you're concerned about the environment, carbon emmisions and global warming like me, check out the 
      earth friendly "Organic - Eco" Collection and if you're into yoga and exercise, our Exercise Collection of 
   Yoga mats and Biking shorts is just for you!</span> <br>
-  There's school subject labels, pop culture references, tech and just visually appealing designs on my store, so whoever you may be,
+  <span>There's school subject labels, pop culture references, tech and just visually appealing designs on my store, so whoever you may be,
   whatever your age and interests might be, there's something that's perfect just for you.</span><br> 
   </p>
-  <ul id="buttons06" class="buttons"><li><a href="https://anoushka.creator-spring.com" class="button n01">Spring Store</a></li></ul>
+  <ul id="buttons06" class="buttons"><li><a href="https://anoushka.creator-spring.com" class="button n01">Spring </a></li></ul>
+
+  <p id="text28"><strong>Bonfire</strong>
+  </p><p id="text29"><span> Check out my Bonfire store for hoodies, sweatshirts, shirts, joggers, drinkware, bags etc. ! I 
+  With over 6+ fundraiser campaigns and more than 50 unique products on my store, there's a wide variety to choose from. 
+  You can customise the color combinations of any existing design or send me an email if you want a custom 
+  design made just for you! <br> <br>
+  <span>Most of my <mark>Fundraising campaigns</mark> where you can buy an article and 100% of the proceeds go directly towards charity
+  (for example, in my last fundraiser, all proceeds were donated towards Cancer Research) are hosted here and you are able to see
+  where to proceeds are directly being put to in the description itself.</span> <br>
+  <span> I personally love the uality of the clothing materials so much because they're so soft, easily washable and easy on my skin and 
+    allows it to breathe since it's made with good quality material. There's school subject labels, pop culture references, tech 
+    and just visually appealing designs on my store, so whoever you may be,whatever your age and interests might be, there's 
+    something that's perfect just for you.</span><br> 
+  </p>
+  <ul id="buttons06" class="buttons"><li><a href="https://anoushka.creator-spring.com" class="button n01">Bonfire </a></li></ul>
 
 </section>
 
