--- a/index.html
+++ b/index.html
@@ -134,11 +134,12 @@
   design made just for you! <br> <br>
   <span>Most of my <mark>Fundraising campaigns</mark> where you can buy an article and 100% of the proceeds go directly towards charity
   (for example, in my last fundraiser, all proceeds were donated towards Cancer Research) are hosted here and you are able to see
-  where to proceeds are directly being put to in the description itself.</span> <br>
-  <span> I personally love the uality of the clothing materials so much because they're so soft, easily washable and easy on my skin and 
-    allows it to breathe since it's made with good quality material. There's school subject labels, pop culture references, tech 
-    and just visually appealing designs on my store, so whoever you may be,whatever your age and interests might be, there's 
-    something that's perfect just for you.</span><br> 
+  where to proceeds are directly being put to in the description itself.</span> <br> <br>
+  <span> I personally love the quality of the clothing materials so much because they're so soft, easily washable and easy on my skin and 
+    allows it to breathe since it's made with good quality material. There's an amazing youth collection for children as well which I absolutely
+    recommend for your children, siblings, cousins etc. There's school subject labels, pop culture references, tech 
+    and just visually appealing designs on my store, so whoever you may be,whatever your age and interests might be, whether you want to buy something
+    for yourself or gift it to your friend, there's something that's perfect just for you and your loved ones</span><br> 
   </p>
   <ul id="buttons06" class="buttons"><li><a href="https://anoushka.creator-spring.com" class="button n01">Bonfire </a></li></ul>
 
