--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
       </ul>
 </section>
 
-<section id="three-section" class="inactive" style="display: none;"><h2 id="text26"><strong>Shop from my stores : International</strong></h2>
+<section id="three-section" class="inactive" style="display: none;">
+  <h2 id="text26"><strong>Shop from my stores : International</strong></h2>
   
   <p id="text28"><strong>Redbubble</strong>
   </p><p id="text29"><span> Check out my Redbubble store for stickers, bags, pouches, phone cases, clothes, birthday cards, pins, 
@@ -137,12 +138,47 @@
   where to proceeds are directly being put to in the description itself.</span> <br> <br>
   <span> I personally love the quality of the clothing materials so much because they're so soft, easily washable and easy on my skin and 
     allows it to breathe since it's made with good quality material. There's an amazing youth collection for children as well which I absolutely
-    recommend for your children, siblings, cousins etc. There's school subject labels, pop culture references, tech 
-    and just visually appealing designs on my store, so whoever you may be,whatever your age and interests might be, whether you want to buy something
+    recommend for your children, siblings, cousins etc. <br>
+    There's school subject labels, pop culture references, tech and just visually appealing designs on my store, 
+    so whoever you may be,whatever your age and interests might be, whether you want to buy something
     for yourself or gift it to your friend, there's something that's perfect just for you and your loved ones</span><br> 
   </p>
   <ul id="buttons06" class="buttons"><li><a href="https://anoushka.creator-spring.com" class="button n01">Bonfire </a></li></ul>
 
+   <p id="text28"><strong>ViralStyle</strong>
+  </p><p id="text29"><span> Check out my Bonfire store for hoodies, sweatshirts, shirts, joggers, drinkware, bags etc. ! I 
+  With over 6+ fundraiser campaigns and more than 50 unique products on my store, there's a wide variety to choose from. 
+  You can customise the color combinations of any existing design or send me an email if you want a custom 
+  design made just for you! <br> <br>
+  <span>Most of my <mark>Fundraising campaigns</mark> where you can buy an article and 100% of the proceeds go directly towards charity
+  (for example, in my last fundraiser, all proceeds were donated towards Cancer Research) are hosted here and you are able to see
+  where to proceeds are directly being put to in the description itself.</span> <br> <br>
+  <span> I personally love the quality of the clothing materials so much because they're so soft, easily washable and easy on my skin and 
+    allows it to breathe since it's made with good quality material. There's an amazing youth collection for children as well which I absolutely
+    recommend for your children, siblings, cousins etc. <br>
+    There's school subject labels, pop culture references, tech and just visually appealing designs on my store, 
+    so whoever you may be,whatever your age and interests might be, whether you want to buy something
+    for yourself or gift it to your friend, there's something that's perfect just for you and your loved ones</span><br> 
+  </p>
+  <ul id="buttons06" class="buttons"><li><a href="https://anoushka.creator-spring.com" class="button n01">ViralStyle</a></li></ul>
+  
+  <h2 id="text26"><strong>Shop from my stores : India </strong></h2>
+   <p id="text28"><strong>FranklyWearing</strong>
+  </p><p id="text29"><span> Check out my Bonfire store for hoodies, sweatshirts, shirts, joggers, drinkware, bags etc. ! I 
+  With over 6+ fundraiser campaigns and more than 50 unique products on my store, there's a wide variety to choose from. 
+  You can customise the color combinations of any existing design or send me an email if you want a custom 
+  design made just for you! <br> <br>
+  <span>Most of my <mark>Fundraising campaigns</mark> where you can buy an article and 100% of the proceeds go directly towards charity
+  (for example, in my last fundraiser, all proceeds were donated towards Cancer Research) are hosted here and you are able to see
+  where to proceeds are directly being put to in the description itself.</span> <br> <br>
+  <span> I personally love the quality of the clothing materials so much because they're so soft, easily washable and easy on my skin and 
+    allows it to breathe since it's made with good quality material. There's an amazing youth collection for children as well which I absolutely
+    recommend for your children, siblings, cousins etc. <br>
+    There's school subject labels, pop culture references, tech and just visually appealing designs on my store, 
+    so whoever you may be,whatever your age and interests might be, whether you want to buy something
+    for yourself or gift it to your friend, there's something that's perfect just for you and your loved ones</span><br> 
+  </p>
+  <ul id="buttons06" class="buttons"><li><a href="https://anoushka.creator-spring.com" class="button n01">FranklyWearing</a></li></ul>
 </section>
 
 <section id="four-section" class="inactive" style="display: none;">
