--- a/index.html
+++ b/index.html
@@ -216,15 +216,13 @@
     <li><a href="#" class="button n01">Sign up Now</a></li>
   </ul>
   <p id="text28"><strong>Grammarly</strong></p>
-  <p id="text29"><span>Get a completely <u> FREE custom .com web domain</u> for a whole year along with custom email features and smooth and 
-    secure web hosting with Bluehost. With web hosting available at the cheapest prices and crazy good service with assistance available
-    24*7, Bluehost has proven to be a great service that I have been using for years now and I have absolutely zero complaints. <u>Free Wordpress 
-    installation</u> available.</span><br> <br>
-    <span> Sign up to Bluehost now and get a <u>30 day money back guarantee</u> if you're unsatisfied with the service. Personally, I 100% recommend
-    checking it out since it's my *favourite* web hosting sites which hosts smooth and effortless hosting for both front end and back end 
-    frameworks.</span></p>
+  <p id="text29"><span>Compose bold, clear, mistake-free writing with Grammarly. Grammarly is a cross-platform cloud-based writing 
+    assistant that reviews spelling, grammar, punctuation, clarity, engagement and delivery mistakes. It uses AI to identify and 
+    search for an appropriate replacement for the mistake it locates. </span><br> <br>
+    <span> Sign up to grammarly now! It's completely free and will make your life so much simpler. Writing essays has never been more fun!
+    </span></p>
   <ul id="buttons06" class="buttons">
-    <li><a href="#" class="button n01">Sign up Now</a></li>
+    <li><a href="https://grammarly.go2cloud.org/SH3Cj" class="button n01">Sign up Now</a></li>
   </ul>
   <p id="text28"><strong>Honey</strong></p>
   <p id="text29"><span>Get a completely <u> FREE custom .com web domain</u> for a whole year along with custom email features and smooth and 
