--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <span> Sign up to grammarly now! It's completely free and will make your life so much simpler. Writing essays has never been more fun!
     </span></p>
   <ul id="buttons06" class="buttons">
-    <li><a href="https://grammarly.go2cloud.org/SH3Cj" class="button n01">Sign up Now</a></li>
+    <li><a href="https://grammarly.go2cloud.org/SH3Cj" class="button n01">Add to Chrome</a></li>
   </ul>
   <p id="text28"><strong>Honey</strong></p>
   <p id="text29"><span>Get a completely <u> FREE custom .com web domain</u> for a whole year along with custom email features and smooth and 
