--- a/index.html
+++ b/index.html
@@ -224,6 +224,9 @@
   <ul id="buttons06" class="buttons">
     <li><a href="https://grammarly.go2cloud.org/SH3Cj" class="button n01">Add to Chrome</a></li>
   </ul>
+  
+  <h2 id="text26"><strong>Refferal links</strong></h2>
+  
   <p id="text28"><strong>Honey</strong></p>
   <p id="text29"><span>Get a completely <u> FREE custom .com web domain</u> for a whole year along with custom email features and smooth and 
     secure web hosting with Bluehost. With web hosting available at the cheapest prices and crazy good service with assistance available
@@ -268,6 +271,9 @@
   <ul id="buttons06" class="buttons">
     <li><a href="#" class="button n01">Sign up Now</a></li>
   </ul>
+    
+  <h2 id="text26"><strong>Promo Codes</strong></h2>
+  
   <p id="text28"><strong>Carrd</strong></p>
   <p id="text29"><span>Get a completely <u> FREE custom .com web domain</u> for a whole year along with custom email features and smooth and 
     secure web hosting with Bluehost. With web hosting available at the cheapest prices and crazy good service with assistance available
@@ -279,7 +285,7 @@
   <ul id="buttons06" class="buttons">
     <li><a href="#" class="button n01">Sign up Now</a></li>
   </ul>
-  <h2 id="text26"><strong>Promo Codes</strong></h2>
+  
 </section>
 
 
