--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div> <div>
     <p id="text23"><a href="#five">Non Profit</a> | <a href="#four"> Games</a></p>
     </div> <div>
-    <p id="text25"><a href="#three">Stores</a> | <a href="#ref">Affiliates</a></p>
+    <p id="text25"><a href="#shop">Stores</a> | <a href="#ref">Affiliates</a></p>
     </div> <div>
     <p id="text03"><a href="#book">Books</a> | <a href="#more">More</a></p>
   </div>
@@ -100,7 +100,8 @@
       </ul>
 </section>
 
-<section id="three-section" class="inactive" style="display: none;">
+<section id="shop-section" class="inactive" style="display: none;">
+  <br>
   <h2 id="text26"><strong>Shop from my stores : International</strong></h2>
   
   <p id="text28"><strong>Redbubble</strong>
