--- a/index.html
+++ b/index.html
@@ -166,13 +166,10 @@
   <h2 id="text26"><strong>Shop from my stores : India </strong></h2>
     <br>
    <p id="text28"><strong>FranklyWearing</strong>
-  </p><p id="text29"><span> Check out my Bonfire store for hoodies, sweatshirts, shirts, joggers, drinkware, bags etc. ! I 
-  With over 6+ fundraiser campaigns and more than 50 unique products on my store, there's a wide variety to choose from. 
+  </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
+  With over 50 unique products on my store, there's a wide variety to choose from. 
   You can customise the color combinations of any existing design or send me an email if you want a custom 
   design made just for you! <br> <br>
-  <span>Most of my <mark>Fundraising campaigns</mark> where you can buy an article and 100% of the proceeds go directly towards charity
-  (for example, in my last fundraiser, all proceeds were donated towards Cancer Research) are hosted here and you are able to see
-  where to proceeds are directly being put to in the description itself.</span> <br> <br>
   <span> I personally love the quality of the clothing materials so much because they're so soft, easily washable and easy on my skin and 
     allows it to breathe since it's made with good quality material. There's an amazing youth collection for children as well which I absolutely
     recommend for your children, siblings, cousins etc. <br>
