--- a/index.html
+++ b/index.html
@@ -228,26 +228,21 @@
   <h2 id="text26"><strong>Refferal links</strong></h2>
   
   <p id="text28"><strong>Honey</strong></p>
-  <p id="text29"><span>Get a completely <u> FREE custom .com web domain</u> for a whole year along with custom email features and smooth and 
-    secure web hosting with Bluehost. With web hosting available at the cheapest prices and crazy good service with assistance available
-    24*7, Bluehost has proven to be a great service that I have been using for years now and I have absolutely zero complaints. <u>Free Wordpress 
-    installation</u> available.</span><br> <br>
-    <span> Sign up to Bluehost now and get a <u>30 day money back guarantee</u> if you're unsatisfied with the service. Personally, I 100% recommend
-    checking it out since it's my *favourite* web hosting sites which hosts smooth and effortless hosting for both front end and back end 
-    frameworks.</span></p>
+  <p id="text29"><span>Who doesn't love saving money? Couponcodes are an awesome way of saving money while shopping online, but
+    browsing for these coupons is a hassle. There's no need for dealing with the headache of looking for coupons anymore, let
+    honey do that for you.</span><br>
+    <span> For *free*, add honey to your browser and let it automatically search for and apply coupons when you 
+      shop online, showing you the best deals and offers for the items in your cart. Make saving money simple and hassle free with Honey.</span></p>
   <ul id="buttons06" class="buttons">
-    <li><a href="#" class="button n01">Save money Now</a></li>
+    <li><a href="#" class="button n01">Join Honey</a></li>
   </ul>
   <p id="text28"><strong>Skillshare</strong></p>
-  <p id="text29"><span>Get a completely <u> FREE custom .com web domain</u> for a whole year along with custom email features and smooth and 
-    secure web hosting with Bluehost. With web hosting available at the cheapest prices and crazy good service with assistance available
-    24*7, Bluehost has proven to be a great service that I have been using for years now and I have absolutely zero complaints. <u>Free Wordpress 
-    installation</u> available.</span><br> <br>
-    <span> Sign up to Bluehost now and get a <u>30 day money back guarantee</u> if you're unsatisfied with the service. Personally, I 100% recommend
-    checking it out since it's my *favourite* web hosting sites which hosts smooth and effortless hosting for both front end and back end 
-    frameworks.</span></p>
+  <p id="text29"><span>Skillshare is an online learning community with thousands of classes for creative and curious people, 
+    on topics including illustration, design, photography, video, freelancing, and more. On Skillshare, millions of members come 
+    together to find inspiration and take the next step in their creative journey..</span><br> <br>
+    <span> Sign up using my link and get one month <u>free skillshare subscription</u> today and learn a new skill and showcase it to the world!</span></p>
   <ul id="buttons06" class="buttons">
-    <li><a href="#" class="button n01">Sign up Now</a></li>
+    <li><a href="#" class="button n01">Join Free Now</a></li>
   </ul>
   <p id="text28"><strong>Fiverr</strong></p>
   <p id="text29"><span>Get a completely <u> FREE custom .com web domain</u> for a whole year along with custom email features and smooth and 
